compile_error.txt


###################### OPENCL PROGRAM BUILD DEBUG OUTPUT ######################

C:\Users\farre\AppData\Local\Temp\comgr-52356d\input\CompileSource:21:5: error: use of undeclared identifier 'let'
    let w = weights[w_index];
    ^
C:\Users\farre\AppData\Local\Temp\comgr-52356d\input\CompileSource:22:128: error: use of undeclared identifier 'w'
    printf("LAYER: %zu, pos: (%zu, %zu), w_offset: %zu, node_input: %f, weight: %f", layer_id, x, y, weights_offset, input[y], w);
                                                                                                                               ^
C:\Users\farre\AppData\Local\Temp\comgr-52356d\input\CompileSource:23:40: error: use of undeclared identifier 'w'
    atomicAdd_g_f(&output[x], input[y]*w);
                                       ^
3 errors generated.
Error: Failed to compile source (from CL or HIP source to LLVM IR).
###############################################################################

